@@ -66,7 +66,7 @@
 <div class="submit_container">
 	<input type="submit" class="submit update" name="update_cart" id="ctrl_update_cart" value="<?php echo $GLOBALS['TL_LANG']['MSC']['updateCartBT']; ?>" /><?php if ($this->checkoutJumpTo): ?>
 	<input type="submit" class="submit checkout" name="checkout" id="ctrl_checkout" value="<?php echo $this->checkoutJumpToLabel; ?>" /><?php endif; ?>
-	<?php if ($this->continueJumpTo) : ?><a class="continue" href="<?php echo $this->continueJumpTo; ?>"><?php echo $GLOBALS['TL_LANG']['MSC']['continueShoppingBT']; ?></a><?php endif; ?>
+	<?php if ($this->continueJumpTo) : ?><a class="continue" href="<?php echo $this->continueJumpTo; ?>"><?php echo $this->continueLabel; ?></a><?php endif; ?>
 </div>
 </form>
 <?php if(count($this->forms)) echo implode("\n", $this->forms); ?>
